# optimization

./: .gitignore  README.md  bayes.py  pyproject.toml  requirements.txt
optimization/: __init__.py  bayes.py
