[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "optimization"
version = "0.1.0"
description = "Bayesian optimization wrapper that maximizes any function"
authors = [
    { name = "Meeso1" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "scikit-learn~=1.5.2",
    "scikit-optimize @ git+https://github.com/Meeso1/scikit-optimize.git@np-int-fix"
]
